--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signature",
+  "name": "T326",
   "description": "signature application created by thinkjs",
   "version": "1.1.0",
   "scripts": {
@@ -12,8 +12,9 @@
     "babel-runtime": "6.x.x",
     "jade": "^1.11.0",
     "mongodb": "^2.0.48",
+    "node-fetch": "^1.5.3",
     "source-map-support": "^0.4.0",
-    "think-cors": "^1.0.8",
+    "think-debug-toolbar": "^1.0.12",
     "thinkjs": "2.2.x",
     "tracer": "^0.8.3",
     "underscore": "^1.8.3"
