--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
+    "html-pdf-wth-rendering": "^1.2.2",
     "jade": "^1.11.0",
     "mongodb": "^2.0.48",
     "node-fetch": "^1.5.3",
+    "pdfkit": "^0.7.2",
     "source-map-support": "^0.4.0",
     "think-debug-toolbar": "^1.0.12",
     "thinkjs": "2.2.x",
