--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "babel-runtime": "6.x.x",
     "html-pdf-wth-rendering": "^1.2.2",
     "jade": "^1.11.0",
+    "moment": "^2.13.0",
     "mongodb": "^2.0.48",
     "node-fetch": "^1.5.3",
+    "nodejs-zip": "^0.1.0",
     "pdfkit": "^0.7.2",
     "source-map-support": "^0.4.0",
     "think-debug-toolbar": "^1.0.12",
