--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
+    "html-pdf-wth-rendering": "^1.2.2",
     "jade": "^1.11.0",
-    "html-pdf":"^2.0.1",
     "moment": "^2.13.0",
     "mongodb": "^2.0.48",
     "node-fetch": "^1.5.3",
