--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "watch": "npm run watch-compile"
   },
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "babel-runtime": "6.x.x",
     "html-pdf-wth-rendering": "^1.2.2",
     "jade": "^1.11.0",
     "moment": "^2.13.0",
     "mongodb": "^2.0.48",
     "node-fetch": "^1.5.3",
+    "node-native-zip": "^1.1.0",
     "nodejs-zip": "^0.1.0",
     "pdfkit": "^0.7.2",
     "source-map-support": "^0.4.0",
