--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,10 +3,13 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 COPY package.json /usr/src/app/
+#安装依赖phantomjs
+RUN sudo apt-get install phantomjs
 #安装最新版本pm2模块
-#RUN cnpm install pm2@latest -g
+RUN cnpm install pm2@latest -g
 #安装依赖
-RUN cnpm install
+RUN npm install
+RUN cnpm install phantomjs@1.9.16
 #复制工程
 COPY . /usr/src/app
 ENV PORT 8360
