modify the dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 #安装依赖phantomjs
-#RUN sudo apt-get install phantomjs
+RUN sudo apt-get install phantomjs
 #安装最新版本pm2模块
 RUN cnpm install pm2@latest -g
 #安装依赖
@@ -16,5 +16,5 @@ ENV PORT 9999
 EXPOSE 9999
 # 线上环境
 RUN npm run compile
-#ENTRYPOINT pm2 start www/production.js --name 'signature'
-ENTRYPOINT node www/production.js
+ENTRYPOINT pm2 start www/production.js --name 'signature'
+#ENTRYPOINT node www/production.js
