--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ coverage/
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules/
+node_modules/!phantomjs
 
 # IDE config
 .idea
