--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ coverage/
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+node_modules/
 
 # IDE config
 .idea
