--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
-    "html-pdf-wth-rendering": "^1.2.2",
+    "html-pdf": "2.0.1",
     "iconv-lite": "^0.4.13",
     "jade": "^1.11.0",
     "moment": "^2.13.0",
