--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 #安装依赖phantomjs
 #RUN apt-get install phantomjs
 #安装最新版本pm2模块
-RUN cnpm install pm2@latest -g
+#RUN cnpm install pm2@latest -g
 #安装依赖
 RUN cnpm install phantomjs@1.9.16
 RUN npm install
@@ -16,5 +16,5 @@ ENV PORT 9999
 EXPOSE 9999
 # 线上环境
 RUN npm run compile
-ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
-#ENTRYPOINT node www/production.js
+#ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
+ENTRYPOINT node www/production.js
