--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,7 @@ EXPOSE 9999
 RUN npm run compile
 #文泉驿-点阵宋体
 RUN apt-get update
+RUN Y
 RUN apt-get upgrade
 RUN apt-get install xfonts-wqy
 #ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
