--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,11 +17,11 @@ EXPOSE 9999
 # 线上环境
 RUN npm run compile
 #换个镜像
-RUN echo "deb http://mirrors.163.com/debian jessie main" > /etc/apt/sources.list
+RUN echo "deb http://mirrors.aliyun.com/ubuntu/ trusty main restricted universe multiverse" >> /etc/apt/sources.list
 #文泉驿-点阵宋体
 RUN apt-get -y update
 RUN apt-get -y upgrade
-RUN apt-get -y install ttf-mscorefonts-installer #微软字体
+#RUN apt-get -y install ttf-mscorefonts-installer #微软字体
 RUN apt-get -y install xfonts-wqy
 #ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
 ENTRYPOINT node www/production.js
