--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,9 @@ RUN npm run compile
 #换个镜像
 RUN rm -v /etc/apt/sources.list
 RUN echo "deb http://mirrors.aliyun.com/ubuntu/ trusty main restricted universe multiverse" >> /etc/apt/sources.list
-RUN apt-get update && apt-get upgrade && apt-get install ttf-mscorefonts-installer xfonts-wqy -y
+RUN apt-get update && apt-get upgrade -y \
+#文泉驿-点阵宋体
+#RUN apt-get -y install ttf-mscorefonts-installer #微软字体
+RUN apt-get -y install xfonts-wqy
 #ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
 ENTRYPOINT node www/production.js
