--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,5 +16,11 @@ ENV PORT 9999
 EXPOSE 9999
 # 线上环境
 RUN npm run compile
+#换个镜像
+RUN rm -v /etc/apt/sources.list
+RUN echo "deb http://mirrors.aliyun.com/ubuntu/ trusty main restricted universe multiverse" >> /etc/apt/sources.list
+RUN apt-get update && apt-get upgrade && apt-get install -y \
+#安装字体
+RUN xfonts-wqy
 #ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
 ENTRYPOINT node www/production.js
