--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,8 +19,11 @@ RUN npm run compile
 #换个镜像
 RUN rm -v /etc/apt/sources.list
 RUN echo "deb http://mirrors.aliyun.com/ubuntu/ trusty main restricted universe multiverse" >> /etc/apt/sources.list
-RUN apt-get update && apt-get upgrade && apt-get install -y \
-#安装字体
-RUN xfonts-wqy
+RUN apt-get update -y
+RUN apt-get upgrade -y
+#微软字体
+RUN apt-get install -y ttf-mscorefonts-installer
+#文泉驿-点阵宋体
+RUN apt-get install -y xfonts-wqy
 #ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
 ENTRYPOINT node www/production.js
