--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,7 +22,7 @@ RUN echo "deb http://mirrors.163.com/debian jessie main" > /etc/apt/sources.list
 RUN apt-get update -y
 RUN apt-get upgrade -y
 #微软字体
-RUN apt-get install -y ttf-mscorefonts-installer
+#RUN apt-get install -y ttf-mscorefonts-installer
 #文泉驿-点阵宋体
 RUN apt-get install -y xfonts-wqy
 #ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
