--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,20 @@
 FROM daocloud.io/library/node:6.2.1
+#换镜像
+RUN rm -v /etc/apt/sources.list
+RUN echo "deb http://mirrors.163.com/debian jessie main" > /etc/apt/sources.list
+RUN apt-get update -y
+RUN apt-get upgrade -y
+#windows字体
+RUN apt-get install unzip
+RUN cd ~
+#Tahoma 字体
+RUN wget http://www.stchman.com/tools/MS_fonts/tahoma.zip
+RUN unzip -d /usr/share/fonts/truetype/msttcorefonts ~/tahoma.zip
+RUN fc-cache -f -v
+RUN rm -f ~/tahoma.zip
+#刷新字体缓存
+RUN fc-cache -f -s -v
+#创建目录
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
@@ -14,15 +30,7 @@ RUN npm install
 COPY . /usr/src/app
 ENV PORT 9999
 EXPOSE 9999
-# 线上环境
+#线上环境
 RUN npm run compile
-#windows字体
-RUN apt-get install unzip
-RUN cd ~
-RUN wget http://www.stchman.com/tools/MS_fonts/tahoma.zip #Tahoma 字体
-RUN unzip -d /usr/share/fonts/truetype/msttcorefonts ~/tahoma.zip
-RUN fc-cache -f -v
-RUN rm -f ~/tahoma.zip
-RUN sudo fc-cache -f -s -v   #刷新字体缓存
-#ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
-ENTRYPOINT node www/production.js
+ENTRYPOINT pm2 start www/production.js --name 'T326_web' --no-daemon
+#ENTRYPOINT node www/production.js
