--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,4 @@
 FROM daocloud.io/library/node:6.2.1
-#换镜像
-RUN rm -v /etc/apt/sources.list
-RUN echo "deb http://mirrors.163.com/debian jessie main" > /etc/apt/sources.list
-RUN apt-get update -y
-RUN apt-get upgrade -y
-#windows字体
-RUN apt-get install unzip
-RUN cd ~
-#Tahoma 字体
-RUN wget http://www.stchman.com/tools/MS_fonts/tahoma.zip
-RUN unzip -d /usr/share/fonts/truetype/msttcorefonts ~/tahoma.zip
-RUN fc-cache -f -v
-RUN rm -f ~/tahoma.zip
-#刷新字体缓存
-RUN fc-cache -f -s -v
 #创建目录
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -28,6 +13,7 @@ RUN cnpm install phantomjs@1.9.16
 RUN npm install
 #复制工程
 COPY . /usr/src/app
+RUN pwd
 ENV PORT 9999
 EXPOSE 9999
 #线上环境
