--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
 #安装依赖phantomjs
 #RUN apt-get install phantomjs
 #安装最新版本pm2模块
-#RUN cnpm install pm2@latest -g
+RUN cnpm install pm2@latest -g
 #安装依赖
 RUN cnpm install phantomjs@1.9.16
 RUN npm install
