--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,6 +13,12 @@ RUN cnpm install phantomjs@1.9.16 html-pdf-wth-rendering@1.2.2
 RUN cnpm install
 #复制工程
 COPY . /usr/src/app
+#添加字体
+RUN rm -v /etc/apt/sources.list
+RUN echo "deb http://mirrors.aliyun.com/ubuntu/ trusty main restricted universe multiverse" >> /etc/apt/sources.list
+RUN apt-get update && apt-get install -y \
+        ttf-mscorefonts-installer \
+         xfonts-wqy
 #设置环境
 ENV PORT 9999
 EXPOSE 9999
