--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,9 +4,9 @@ FROM index.alauda.cn/gugud/node:6.2.1
 RUN rm -v /etc/apt/sources.list
 RUN echo "deb http://mirrors.aliyun.com/ubuntu/ trusty main restricted universe multiverse" >> /etc/apt/sources.list
 
-RUN apt-get update && apt-get install -y \
-    ttf-mscorefonts-installer \
-    xfonts-wqy
+RUN apt-get update
+RUN apt-get install -y ttf-mscorefonts-installer
+RUN apt-get install -y xfonts-wqy
 
 #创建目录
 RUN mkdir -p /usr/src/app
